AB#1313 Add several improvements to handle pasting and behave correctly on firefox

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1009,9 +1009,13 @@ header.searchPagination {
   padding-bottom: 1px;
 }
 
-.positive-numeric-input {
+.integer-input {
+  width: 5rem;
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+
   input {
-    width: 5rem;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
@@ -1023,6 +1027,23 @@ header.searchPagination {
       border-color: #86b7fe;
       outline: none;
       box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    }
+  }
+
+  .integer-input-buttons {
+    position: absolute;
+    right: 5px;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    button {
+      padding: 0;
+      min-width: 15px;
+      min-height: 15px;
+      line-height: 15px;
     }
   }
 }
